Agregue la page de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Correo: 153322410+marisol161@users.noreply.github.com</h1>
+    <script src="app.js"></script>
 </body>
 </html>
