--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Correo: 153322410+marisol161@users.noreply.github.com</h1>
+    <p>Estudiante: </p>
     <script src="app.js"></script>
 </body>
 </html>
